src/test/wacc/invalid/semanticErr/pairs/noPairCovariance.wacc
# Pairs should not be covariant
# Thanks to Nathaniel Burke

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(char[], char[]) pcs = null ;
  pair(string, string) bad = pcs
end
